<resources>
    <string name="all_app_name">SocyMusic</string>
    <string name="all_coming_soon">Coming Soon!</string>
    <string name="all_playlist_favorites_name">Favorites</string>
    <string name="all_create">Create</string>
    <string name="all_yes">Yes</string>
    <string name="all_no">No</string>
    <string name="all_song_count">%d Song(s)</string>
    <string name="all_loading_library">Looking for songs on your device…</string>
    <string name="all_album_art_desc">Song thumbnail</string>

    <string-array name="main_tabs">
        <item>All Songs</item>
        <item>Albums</item>
        <item>Playlists</item>
        <item>Settings</item>
        <item>Information</item>
    </string-array>
    <string name="playlist_tab_list_empty">No playlist found</string>
    <string name="albums_tab_list_empty">No albums found</string>
    <string name="main_err_file_gone">File moved or deleted.</string>

    <string name="all_songs_list_empty">No songs found…</string>

    <string name="main_menu_item_about">About</string>
    <string name="main_menu_item_settings">Settings</string>

    <string name="about_description">SocyMusic is an open-source Android music player written in Java to which everyone can contribute to.</string>
    <string name="about_version">Version %s</string>

    <string name="notif_channel_media_name">Media Channel</string>
    <string name="notif_channel_media_description">Media channel for audio playback</string>
    <string name="notif_previous">Previous</string>
    <string name="notif_pause">Pause</string>
    <string name="notif_play">Play</string>
    <string name="notif_next">Next</string>

    <string name="dir_browser_title">Select Directories</string>
    <string name="dir_browser_internal_storage">Internal Storage</string>
    <string name="dir_browser_sd_card">SD card (%s)</string>
    <string name="dir_browser_folder_list_empty">Folder is empty</string>
    <string name="dir_browser_folder_unreadable">Cannot access folder</string>.

    <string name="prefs_title_lib_paths">Library Folders</string>
    <string name="prefs_summery_lib_paths">Configure where to look for songs on your device.</string>
    <string name="prefs_summery_theme">Choose the primary colors of your app</string>
    <string name="prefs_title_theme">Theme</string>


    <string name="playlist_empty">Playlist is empty…</string>

    <string name="add_to_playlist_dialog_title">Select Playlist:</string>
    <string name="add_to_playlist_dialog_new">Create New Playlist…</string>
    <string name="add_to_playlist_dialog_already_in_playlist">Song is already in playlist</string>
    <string name="add_to_playlist_dialog_add_anyway">Do you want to add it anyway?</string>
    <string name="new_playlist_dialog_enter_name">Enter Playlist Name…</string>
    <string name="new_playlist_dialog_title">New Playlist</string>
    <string name="delete_playlist_dialog_title">Delete Playlist</string>
    <string name="delete_playlist_dialog_confirm">Are you sure you want to delete this playlist?</string>

    <string name="settings_cannot_change_lib">Not done loading songs. Please wait.</string>
    <string name="all_reloading_library">Reloading Songs…</string>
    <string name="activate_sleeptime_function">Activate SleepTime function:</string>
    <string name="sleepTimeDescription">The SleepTime functionality allows you to set a time at which the app will stop playing music and close itself. To allow this functionality you need to switch the below switch to ON and set a time above.</string>
    <string name="timepicker_button">Save selected settings</string>

    <string-array name="themeOptions">
        <item>Inverted (Experimental)</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Aqua</item>
        <item>Purple</item>
        <item>Purple - Blue</item>
        <item>Orange - Green</item>
        <item>Purple - Aqua</item>
    </string-array>

    <!-- Do not change the name of these, they are used in code -->
    <string-array name="themeValues">
        <item>Inverted_theme</item>
        <item>Red_theme</item>
        <item>Blue_theme</item>
        <item>Green_theme</item>
        <item>Orange_theme</item>
        <item>Yellow_theme</item>
        <item>Aqua_theme</item>
        <item>Purple_theme</item>
        <item>Purpleblue_theme</item>
        <item>Orangegreen_theme</item>
        <item>Purpleaqua_theme</item>
    </string-array>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>
