<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Library" android:layout="@layout/preferences_category">
        <Preference
            app:key="lib_paths"
            app:summary="@string/prefs_summery_lib_paths"
            app:title="@string/prefs_title_lib_paths" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Appearance"
        android:layout="@layout/preferences_category"
        app:key="appearance_category">
        <ListPreference
            app:key="theme"
            app:summary="@string/prefs_summery_theme"
            app:title="@string/prefs_title_theme"
            android:entries="@array/themeOptions"
            android:entryValues="@array/themeValues"/>
    </PreferenceCategory>

</PreferenceScreen>